alignment issue in get freight quote resolved,updated message from "Status Changed, Paid Successfully" to "Freight order paid successfully"

--- a/public/sximo/css/sximo.css
+++ b/public/sximo/css/sximo.css
@@ -3032,7 +3032,6 @@ table .btn.btn-xs {
 .action {
   margin-top: 1px;
 }
-<<<<<<< HEAD
 
 
 .sbox-title {
@@ -3097,8 +3096,9 @@ table .btn.btn-xs {
   position: relative !important;
   top: 2px;
 }
-=======
 td.label-view.text-right {
   text-align: left;
 }
->>>>>>> a6ca2470cbb36953989e65cffc1b04500213cb3a
+.radio-inline:first-child {
+  padding-left: 0;
+}
